policies/components/scheduling/require-topologyspreadconstraints/require-topologyspreadconstraints.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ibm-require-topologyspreadconstraints
  annotations:
    policies.kyverno.io/title: Spread Pods Across Nodes & Zones
    policies.kyverno.io/category: IBM - Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Deployment, StatefulSet
    policies.kyverno.io/minversion: 1.8.0
    policies.kyverno.io/description: >-
      Deployments to a Kubernetes cluster with multiple availability zones often need to
      distribute those replicas to align with those zones to ensure site-level failures
      do not impact availability. This policy ensures topologySpreadConstraints are defined,
      to spread pods over nodes and zones. All Deployments and StatefulSets should carry
      this configuration (excluding singletons), even in cases where there is a single
      replica it serves to document how the scheduler should handle distribution of newly
      created replicas when/if that deployment is scaled up at a later date.
    kyverno.io/kyverno-version: 1.8.0
    kyverno.io/kubernetes-version: "1.22-1.23"
spec:
  validationFailureAction: Audit
  background: true
  failurePolicy: Ignore
  rules:
    - name: spread-pods
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
              namespaceSelector:
                matchExpressions:
                  - key: ibm.com/kyverno
                    operator: Exists
      exclude:
        any:
          - resources:
              selector:
                matchLabels:
                  ibm.com/singleton: "true"
      validate:
        message: "topologySpreadConstraint for kubernetes.io/hostname & topology.kubernetes.io/zone are required"
        deny:
          conditions:
            any:
              - key: "{{request.object.spec.template.spec.topologySpreadConstraints[?topologyKey=='kubernetes.io/hostname' || topologyKey=='topology.kubernetes.io/zone'] || `[]` | length(@) }}"
                operator: NotEquals
                value: 2
