policies/components/scheduling/require-topologyspreadconstraints/resources.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fail1
  namespace: mas-dev-core
  labels:
    app: thanos-memcached
spec:
  selector:
    matchLabels:
      app: thanos-memcached
  serviceName: memcached
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: thanos-memcached
    spec:
      containers:
        - name: memcached
          image: memcached:1.6.17-alpine
          command:
            - memcached
            - -m 2048
            - -o
            - modern
            - -v
          ports:
            - name: tcp-memcached
              containerPort: 11211
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: foo.bar/test
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: thanos-memcached
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: thanos-memcached
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fail2
  namespace: mas-dev-core
  labels:
    app: thanos-memcached
spec:
  selector:
    matchLabels:
      app: thanos-memcached
  serviceName: memcached
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: thanos-memcached
    spec:
      containers:
        - name: memcached
          image: memcached:1.6.17-alpine
          command:
            - memcached
            - -m 2048
            - -o
            - modern
            - -v
          ports:
            - name: tcp-memcached
              containerPort: 11211
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: foo.bar/test
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: thanos-memcached
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: thanos-memcached
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fail3
  namespace: mas-dev-core
  labels:
    app: thanos-memcached
spec:
  selector:
    matchLabels:
      app: thanos-memcached
  serviceName: memcached
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: thanos-memcached
    spec:
      containers:
        - name: memcached
          image: memcached:1.6.17-alpine
          command:
            - memcached
            - -m 2048
            - -o
            - modern
            - -v
          ports:
            - name: tcp-memcached
              containerPort: 11211
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pass
  namespace: mas-dev-core
  labels:
    app: thanos-memcached
spec:
  selector:
    matchLabels:
      app: thanos-memcached
  serviceName: memcached
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: thanos-memcached
    spec:
      containers:
        - name: memcached
          image: memcached:1.6.17-alpine
          command:
            - memcached
            - -m 2048
            - -o
            - modern
            - -v
          ports:
            - name: tcp-memcached
              containerPort: 11211
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: foo.bar/test
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: thanos-memcached
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: thanos-memcached
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: thanos-memcached
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: skip
  namespace: mas-dev-core
  labels:
    app: thanos-memcached
    ibm.com/singleton: "true"
spec:
  selector:
    matchLabels:
      app: thanos-memcached
  serviceName: memcached
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: thanos-memcached
        ibm.com/singleton: "true"
    spec:
      containers:
        - name: memcached
          image: memcached:1.6.17-alpine
          command:
            - memcached
            - -m 2048
            - -o
            - modern
            - -v
          ports:
            - name: tcp-memcached
              containerPort: 11211
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: foo.bar/test
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: thanos-memcached
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: thanos-memcached
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: thanos-memcached
